--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html ng-app="CatsRescue">
+<html ng-app="CatsApp">
   <head>
     <title><%= title %></title>
     <script src="javascripts/jquery.min.js"></script>
     <script src="javascripts/angular.min.js"></script>
+    <script src="javascripts/angular-route.min.js"></script>
     <script src="javascripts/app.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
