--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -17,6 +17,19 @@
         <input type="text" ng-model="note">
         <input type="Submit" value="Add Cat!">
       </form>
+
+      <h2>Featured Cat!</h2>
+        <li ng-repeat="cat in cats">
+          {{cat.name}} - <em>{{cat.note}}</em>
+        </li>
+
+      <hr>
+      <h3>Cats for Adoption</h3>
+      <ul>
+        <li ng-repeat="cat in cats">
+          {{cat.name}} - <em>{{cat.note}}</em>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
